examples/diagnostics/expected/1114-diagnostics-unknown-type-nested-closure-rejected.stderr
error: unknown type 'Coordnate'
  --> examples/diagnostics/1114-diagnostics-unknown-type-nested-closure-rejected.sx:8:14
   |
 8 |         bad: Coordnate = ---;
   |              ^^^^^^^^^
